   * add a backup save_id to use if both save_id and description are empty
   * fix duplicate key values being concatenated: just replace with last value
 * documentation: switch doxygen templates from CVS to SVN, Savannah to Gna!
 * added a --with-preferences-dir configure option to allow using a directory
   other than .wesnoth, for coexistence of multiple versions on same machine
 * various bug fixes and code cleanups

Version 1.0rc1:
 * language and i18n:
   * updated translations: Afrikaans, Bulgarian, Catalan, Finnish, German,
     Greek, Hungarian, Japanese, Portuguese (Brazil), Russian, Slovenian,
     Spanish, Turkish
   * new manual: Hungarian, updated manual: English, Swedish
   * updated man pages: English, German, Swedish 
 * campaigns:
   * The Dark Hordes
     * Crelanu's Book no longer ends if enemy leaders are killed
     * Underground Pool no longer ends if enemy leaders are killed
     * Underground Pool can now only be won with Gwiti or Tanar (#14495)
   * Son of the Black Eye
     * Watch Towers can no longer be recalled in Clash of Armies
     * Saving Inarix no longer ends if enemy leaders are killed
     * tweaked Black Flag and Desert of Death maps
     * made End of Peace, Toward Mountains of Haag, and Black Flag easier
   * Eastern Invasion
     * fix Konrad II's lines not being spoken in The Council (#14500)
     * change the holy waters to "holy amulets" (also #14539, #14559)
     * Drowned Plains now has fog (#14499)
   * Heir to the Throne
     * fix Delfador losing experience at Siege of Elensefar (#14508)
 * units:
   * changed Orcish Shamans from 20 to 23 HP (Novice 24, Old 22)
   * changed all Orcish Shamans from 60 to 70% defense on villages
   * fixed incorrect reference to Demilich image (#14542)
 * fixed long filenames overflowing editor file chooser dialog (#13855)
 * fixed filenames with spaces causing garbled errors (#14494)
 * multiplayer maps now make better use of team names from settings